# n-bch-rs

./: .gitignore  .travis.yml  Makefile  README.md  package-lock.json  package.json
lib/: bindgen.js  bindgen_bg.wasm  decoder.test.js  encoder.test.js  index.js
native/src/: lib.rs
node/: package-lock.json  package.json
node/lib/: bindgen.js  bindgen_bg.wasm  index.js
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
