[package]
name = "n-bch-rs"
version = "0.0.1"
authors = ["neonphog <neonphog@gmail.com>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "n_bch_rs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
reed-solomon = "0.2.1"
